--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
-THIS IS A TEST WEBPAGE MADE BY RYAN
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
+<html>
+<head>
 
-<p> testing paragraph functionality </p>
-<h2> testing h2 functionality </h2>
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+
+    <title>CompanyName - PageName</title>
+
+    <meta http-equiv="Content-Language" content="en-us" />
+
+    <meta http-equiv="imagetoolbar" content="no" />
+
+    <meta name="MSSmartTagsPreventParsing" content="true" />
+
+    <meta name="description" content="Description" />
+    <meta name="keywords" content="Keywords" />
+    <meta name="author" content="Enlighten Designs" />
+
+    <style type="text/css" media="all">@import "css/master.css";</style>  <style type="text/css" media="all">@import "css/master.css";</style>
+</head>
+<body>
+ 
+</body>
+</html>
