--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
     <meta name="keywords" content="Keywords" />
     <meta name="author" content="Enlighten Designs" />
 
-    <style type="text/css" media="all">@import "css/master.css";</style>  <style type="text/css" media="all">@import "css/master.css";</style>
+    <style type="text/css" media="all">@import "css/master.css";</style>  <style type="text/css" media="all">@import "css/main.css";</style>
 </head>
 <body>
+
+	<div id="page-container">
+		MY NAMES JEFF
+	</div>
  
 </body>
 </html>
