--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="keywords" content="Keywords" />
     <meta name="author" content="Enlighten Designs" />
 
-    <style type="text/css" media="all">@import "css/master.css";</style>  <style type="text/css" media="all">@import "css/main.css";</style>
+    <style type="text/css" media="all">@import "css/main.css";</style>  <style type="text/css" media="all">@import "css/main.css";</style>
 </head>
 <body>
 
