--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+<!DOCTYPE html>
 <html>
-<head>
-
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-
-    <title>CompanyName - PageName</title>
-
-    <meta http-equiv="Content-Language" content="en-us" />
-
-    <meta http-equiv="imagetoolbar" content="no" />
-
-    <meta name="MSSmartTagsPreventParsing" content="true" />
-
-    <meta name="description" content="Description" />
-    <meta name="keywords" content="Keywords" />
-    <meta name="author" content="Enlighten Designs" />
-
-    <style type="text/css" media="all">@import "css/main.css";</style>  <style type="text/css" media="all">@import "css/main.css";</style>
-</head>
-<body>
-
-	<div id="page-container">
-		MY NAMES JEFF
-	</div>
- 
-</body>
+	<head>
+		<title>Hank Quinlan, Horrible Cop</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Hank Quinlan!</h1>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
