--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<title>Ryan Alston, Amateur Coder</title>
+		<link rel="stylesheet" type="text/css" href="Desktop/'raalston.github.io'/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -21,8 +21,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="raalston@ucsc.edu">email</a></li>
+        		<li><a href="https://github.com/raalston">github.com/raalston</a></li>
 			</ul>
 		</footer>
 	</body>
