--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Ryan Alston!</h1>
-				<p>I'm a second year Computer Science student at UCSC <a href="/about">Read more about my life...</a></p>
+				<p>I'm a second year Computer Science student at UCSC </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
