--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/cv">Pojects</a></li>
+        		<li><a href="/blog">Lifting</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Ryan Alston!</h1>
 				<p>I'm a second year Computer Science student at UCSC </p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+    		</div>
+		</div>
 		<footer>
     		<ul>
         		<li><a href="raalston@ucsc.edu">email</a></li>
