--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">Pojects</a></li>
+        		<li><a href="/cv">Projects</a></li>
         		<li><a href="/blog">Lifting</a></li>
     		</ul>
 		</nav>
