--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Ryan Alston, Amateur Coder</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">Projects</a></li>
-        		<li><a href="/blog">Lifting</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Ryan Alston!</h1>
-				<p>I'm a second year Computer Science student at UCSC </p>
-    		</div>
-		</div>
-		<footer>
-    		<ul>
-        		<li><a href="raalston@ucsc.edu">email</a></li>
-        		<li><a href="https://github.com/raalston">github.com/raalston</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Ryan Alston, Amateur Coder
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
