--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Ryan Alston, Amateur Coder
+title: Ryan Alston: Amateur Coder
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Hank Quinlan!</h1>
